forgot to add firefox-specific class for the scrollbar fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,7 +122,7 @@ table {
  * - See https://spectrum.chat/thread/a59e1802-36ba-422d-bfdb-9a357088cfb7 (couldn't find much more on the issue as it's
  * supposedly quite recent, i.e. v57.0.0)
  */
-.windows {
+.windows.firefox {
   .display-row {
     overflow: hidden !important;
   }
